--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@edx/frontend-enterprise-logistration": "8.0.0",
     "@edx/frontend-enterprise-utils": "8.0.0",
     "@edx/frontend-platform": "7.1.0",
-    "@edx/openedx-atlas": "^0.6.0",
-    "@edx/reactifex": "^2.2.0",
+    "@edx/openedx-atlas": "0.6.0",
+    "@edx/reactifex": "2.2.0",
     "@loadable/component": "5.16.3",
     "@lukemorales/query-key-factory": "1.3.4",
-    "@openedx/paragon": "^21.5.7",
+    "@openedx/paragon": "21.13.1",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
     "accessible-nprogress": "2.1.2",
@@ -27,7 +27,7 @@
     "classnames": "2.2.6",
     "color": "3.1.3",
     "core-js": "3.7.0",
-    "dayjs": "^1.11.9",
+    "dayjs": "1.11.10",
     "dompurify": "2.3.6",
     "email-prop-type": "1.1.7",
     "formik": "2.2.9",
