--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@1.2.2",
-    "@edx/frontend-component-footer": "13.0.2",
-    "@edx/frontend-enterprise-catalog-search": "9.0.0",
-    "@edx/frontend-enterprise-hotjar": "6.0.0",
-    "@edx/frontend-enterprise-logistration": "8.0.0",
-    "@edx/frontend-enterprise-utils": "8.0.0",
-    "@edx/frontend-platform": "7.1.0",
+    "@edx/frontend-component-footer": "14.0.1",
+    "@edx/frontend-enterprise-catalog-search": "10.3.0",
+    "@edx/frontend-enterprise-hotjar": "7.1.0",
+    "@edx/frontend-enterprise-logistration": "9.1.0",
+    "@edx/frontend-enterprise-utils": "9.1.0",
+    "@edx/frontend-platform": "8.0.0",
     "@edx/openedx-atlas": "^0.6.0",
     "@edx/reactifex": "^2.2.0",
     "@loadable/component": "5.16.3",
@@ -64,7 +64,7 @@
   "devDependencies": {
     "@edx/browserslist-config": "1.1.1",
     "@faker-js/faker": "8.4.1",
-    "@openedx/frontend-build": "13.0.28",
+    "@openedx/frontend-build": "14.0.3",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.5",
@@ -74,7 +74,8 @@
     "acorn": "8.5.0",
     "axios-mock-adapter": "1.19.0",
     "enzyme": "3.11.0",
-    "jest-canvas-mock": "2.4.0",
+    "jest-canvas-mock": "2.5.2",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "3.0.3",
     "jest-when": "3.6.0",
     "match-media-mock": "0.1.1",
