chore: PR feedback

--- a/.env.development
+++ b/.env.development
@@ -42,7 +42,7 @@ HOTJAR_DEBUG=''
 ENABLE_SKILLS_QUIZ='true'
 ENABLE_NOTICES=''
 FEATURE_ENABLE_PROGRAMS='true'
-FEATURE_ENABLE_MY_CAREER='false'
+FEATURE_ENABLE_MY_CAREER=''
 FEATURE_PROGRAM_TYPE_FACET='true'
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
 LEARNING_TYPE_FACET='true'
