--- a/.env.development-stage
+++ b/.env.development-stage
@@ -49,6 +49,7 @@ LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
 LEARNER_SUPPORT_SPEND_ENROLLMENT_LIMITS_URL='http://edx.org'
 LEARNER_SUPPORT_ABOUT_DEACTIVATION_URL='http://edx.org'
+LEARNER_SUPPORT_SELF_PACED_COURSE_MODE_URL='http://edx.org'
 FEATURE_ENABLE_PATHWAYS='true'
 FEATURE_ENABLE_COURSE_REVIEW=''
 FEATURE_ENROLL_WITH_ENTERPRISE_OFFERS='true'
