chore: Update tests

--- a/.env.development-stage
+++ b/.env.development-stage
@@ -59,6 +59,7 @@ GETSMARTER_PRIVACY_POLICY_URL='https://www.getsmarter.com/privacy-policy'
 GETSMARTER_LEARNER_DASHBOARD_URL='https://www.getsmarter.com/account'
 FEATURE_CONTENT_HIGHLIGHTS='true'
 FEATURE_ENABLE_EMET_REDEMPTION='true'
+FEATURE_ENABLE_VIDEO_CATALOG='false'
 
 # Algolia
 ALGOLIA_INDEX_NAME='enterprise_catalog_new'
