--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@1.2.3",
-    "@edx/frontend-component-footer": "13.0.2",
+    "@edx/frontend-component-footer": "13.0.3",
     "@edx/frontend-enterprise-catalog-search": "10.5.0",
     "@edx/frontend-enterprise-hotjar": "6.0.0",
     "@edx/frontend-enterprise-logistration": "8.0.0",
     "@edx/frontend-enterprise-utils": "8.0.0",
+    "@edx/frontend-logging": "^4.3.0",
     "@edx/frontend-platform": "7.1.0",
     "@edx/openedx-atlas": "0.6.0",
     "@edx/reactifex": "2.2.0",
     "@loadable/component": "5.16.3",
     "@lukemorales/query-key-factory": "1.3.4",
+    "@openedx/frontend-slot-footer": "^1.0.3",
     "@openedx/paragon": "21.13.1",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
@@ -46,8 +48,8 @@
     "react-instantsearch-dom": "6.38.1",
     "react-parallax": "3.3.0",
     "react-redux": "7.2.2",
-    "react-router": "6.16.0",
-    "react-router-dom": "6.16.0",
+    "react-router": "6.18.0",
+    "react-router-dom": "6.18.0",
     "react-router-hash-link": "2.3.1",
     "react-scroll": "1.8.4",
     "react-string-replace": "1.1.1",
