--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "dist",
-    "jsx": "react-jsx",
-    "lib": ["ES2021.String"],
+    // "jsx": "react-jsx",
+    "lib": ["ES2021"],
   },
   "include": [
     "src/**/*",
