chore: use react-jsx in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "dist",
-    // "jsx": "react-jsx",
+    "jsx": "react-jsx",
     "lib": ["ES2021"],
   },
   "include": [
