feat: expose `getRoutes` to share routes with private env.config.js files (#1143)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@1.2.3",
-    "@edx/frontend-component-footer": "13.0.2",
+    "@edx/frontend-component-footer": "13.0.3",
     "@edx/frontend-enterprise-catalog-search": "10.6.0",
     "@edx/frontend-enterprise-hotjar": "6.0.0",
     "@edx/frontend-enterprise-logistration": "8.0.0",
@@ -18,6 +18,7 @@
     "@edx/reactifex": "2.2.0",
     "@loadable/component": "5.16.3",
     "@lukemorales/query-key-factory": "1.3.4",
+    "@openedx/frontend-slot-footer": "1.0.3",
     "@openedx/paragon": "21.13.1",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
@@ -46,8 +47,8 @@
     "react-instantsearch-dom": "6.38.1",
     "react-parallax": "3.3.0",
     "react-redux": "7.2.2",
-    "react-router": "6.16.0",
-    "react-router-dom": "6.16.0",
+    "react-router": "6.18.0",
+    "react-router-dom": "6.18.0",
     "react-router-hash-link": "2.3.1",
     "react-scroll": "1.8.4",
     "react-string-replace": "1.1.1",
@@ -61,8 +62,9 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "1.1.1",
+    "@edx/typescript-config": "1.1.0",
     "@faker-js/faker": "8.4.1",
-    "@openedx/frontend-build": "13.0.28",
+    "@openedx/frontend-build": "14.0.14",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.5",
@@ -81,7 +83,8 @@
     "react-test-renderer": "17.0.2",
     "reactifex": "1.1.1",
     "resize-observer-polyfill": "1.5.1",
-    "rosie": "2.1.1"
+    "rosie": "2.1.1",
+    "ts-loader": "9.5.1"
   },
   "keywords": [],
   "license": "AGPL-3.0",
@@ -89,8 +92,8 @@
     "build": "fedx-scripts webpack",
     "build:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run build",
     "i18n_extract": "fedx-scripts formatjs extract --throws",
-    "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
-    "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx .",
+    "lint": "fedx-scripts eslint --ext .js --ext .jsx --ext .ts --ext .tsx .",
+    "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx --ext .ts --ext .tsx .",
     "precommit": "npm run lint",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save",
