feat: adds end timestamp to maintenance banner

--- a/.env.development
+++ b/.env.development
@@ -36,6 +36,7 @@ FEATURE_LANGUAGE_FACET='true'
 IS_MAINTENANCE_ALERT_ENABLED=''
 MAINTENANCE_ALERT_MESSAGE=''
 MAINTENANCE_ALERT_START_TIMESTAMP=''
+MAINTENANCE_ALERT_END_TIMESTAMP=''
 HOTJAR_APP_ID=''
 HOTJAR_VERSION=6
 HOTJAR_DEBUG=''
