--- a/.env.development
+++ b/.env.development
@@ -24,6 +24,7 @@ SITE_NAME='edX'
 ALGOLIA_APP_ID=''
 ALGOLIA_SEARCH_API_KEY=''
 ALGOLIA_INDEX_NAME=''
+ALGOLIA_REPLICA_INDEX_NAME=''
 ALGOLIA_INDEX_NAME_JOBS=''
 FULLSTORY_ORG_ID=''
 USE_API_CACHE=''
