chore: allow users to opt into major upgrades

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,9 @@
     "config:recommended",
     "group:allNonMajor"
   ],
+  "major": {
+    "dependencyDashboardApproval": true
+  },
   "patch": {
     "automerge": true
   },
