refactor: remove deprecated React Query callback fns from useStatefulEnroll

--- a/package.json
+++ b/package.json
@@ -93,9 +93,9 @@
     "build": "fedx-scripts webpack",
     "build:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run build",
     "i18n_extract": "fedx-scripts formatjs extract --throws",
+    "check-types": "tsc --noEmit",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx --ext .ts --ext .tsx .",
-    "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx --ext .ts --ext .tsx .",
-    "precommit": "npm run lint",
+    "lint:fix": "npm run lint -- --fix",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save",
     "start": "fedx-scripts webpack-dev-server --progress",
