--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
         node-version-file: '.nvmrc'
     - name: Install dependencies
       run: npm ci
+    - name: Check types
+      run: npm run check-types
     - name: Lint
       run: npm run lint
     - name: extract_translations
