--- a/package.json
+++ b/package.json
@@ -7,99 +7,99 @@
     "extends @edx/browserslist-config"
   ],
   "dependencies": {
-    "@edx/brand": "npm:@openedx/brand-openedx@1.2.3",
-    "@edx/frontend-component-footer": "npm:@adamstankiewicz/openedx-frontend-component-footer@^14.2.0",
+    "@edx/brand": "npm:@openedx/brand-openedx@^1.2.3",
+    "@edx/frontend-component-footer": "^14.2.0",
     "@edx/frontend-enterprise-catalog-search": "npm:@adamstankiewicz/openedx-frontend-enterprise-catalog-search@^10.9.3",
-    "@edx/frontend-enterprise-hotjar": "npm:@adamstankiewicz/openedx-frontend-enterprise-hotjar@^7.2.3",
-    "@edx/frontend-enterprise-logistration": "npm:@adamstankiewicz/openedx-frontend-enterprise-logistration@^9.2.3",
+    "@edx/frontend-enterprise-hotjar": "^7.2.0",
+    "@edx/frontend-enterprise-logistration": "^9.2.0",
     "@edx/frontend-enterprise-utils": "npm:@adamstankiewicz/openedx-frontend-enterprise-utils@^9.2.2",
-    "@edx/frontend-platform": "npm:@adamstankiewicz/openedx-frontend-platform@^8",
-    "@edx/openedx-atlas": "0.6.2",
-    "@edx/reactifex": "2.2.0",
-    "@loadable/component": "5.16.3",
-    "@lukemorales/query-key-factory": "1.3.4",
-    "@openedx/frontend-slot-footer": "npm:@adamstankiewicz/openedx-frontend-slot-footer@^1.1.3",
+    "@edx/frontend-platform": "^8.2.1",
+    "@edx/openedx-atlas": "^0.6.2",
+    "@edx/reactifex": "^2.2.0",
+    "@loadable/component": "^5.16.3",
+    "@lukemorales/query-key-factory": "^1.3.4",
+    "@openedx/frontend-slot-footer": "^1.1.0",
     "@openedx/paragon": "^22.15.1",
-    "@tanstack/react-query": "4.28.0",
-    "@tanstack/react-query-devtools": "4.29.0",
-    "accessible-nprogress": "2.1.2",
-    "algoliasearch": "4.6.0",
-    "classnames": "2.2.6",
-    "color": "3.1.3",
-    "core-js": "3.7.0",
-    "dayjs": "1.11.13",
-    "dompurify": "2.5.4",
-    "formik": "2.2.9",
-    "history": "4.10.1",
-    "iso-639-1": "2.1.4",
-    "jest-localstorage-mock": "2.4.26",
-    "lodash.camelcase": "4.3.0",
-    "lodash.capitalize": "4.2.1",
-    "lodash.clonedeep": "4.5.0",
-    "lodash.debounce": "4.0.8",
-    "lodash.isnil": "4.0.0",
-    "plotly.js-dist": "2.17.0",
-    "prop-types": "15.7.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-helmet": "6.1.0",
-    "react-instantsearch-dom": "6.38.1",
-    "react-parallax": "3.5.1",
-    "react-redux": "8.1.1",
-    "react-router": "6.18.0",
-    "react-router-dom": "6.18.0",
-    "react-router-hash-link": "2.3.1",
-    "react-scroll": "1.9.2",
-    "react-string-replace": "1.1.1",
-    "react-transition-group": "4.4.1",
-    "redux": "4.0.5",
-    "universal-cookie": "4.0.4",
-    "uuid": "9.0.0",
-    "video.js": "8.3.0",
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.29.0",
+    "accessible-nprogress": "^2.1.2",
+    "algoliasearch": "^4.6.0",
+    "classnames": "^2.2.6",
+    "color": "^3.1.3",
+    "core-js": "^3.7.0",
+    "dayjs": "^1.11.13",
+    "dompurify": "^2.5.4",
+    "formik": "^2.2.9",
+    "history": "^4.10.1",
+    "iso-639-1": "^2.1.4",
+    "jest-localstorage-mock": "^2.4.26",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.capitalize": "^4.2.1",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isnil": "^4.0.0",
+    "plotly.js-dist": "^2.17.0",
+    "prop-types": "^15.7.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-instantsearch-dom": "^6.38.1",
+    "react-parallax": "^3.5.1",
+    "react-redux": "^8.1.1",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
+    "react-router-hash-link": "^2.3.1",
+    "react-scroll": "^1.9.2",
+    "react-string-replace": "^1.1.1",
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "universal-cookie": "^4.0.4",
+    "uuid": "^9.0.0",
+    "video.js": "^8.3.0",
     "videojs-vjstranscribe": "^1.0.3",
-    "videojs-youtube": "3.0.1"
+    "videojs-youtube": "^3.0.1"
   },
   "devDependencies": {
-    "@edx/browserslist-config": "1.4.0",
-    "@edx/typescript-config": "1.1.0",
-    "@faker-js/faker": "8.4.1",
-    "@openedx/frontend-build": "npm:@adamstankiewicz/openedx-frontend-build@^14",
-    "@tanstack/eslint-plugin-query": "4.29.9",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "16.2.0",
-    "@testing-library/user-event": "14.6.1",
-    "acorn": "8.5.0",
-    "axios": "1.6.7",
-    "axios-mock-adapter": "1.19.0",
-    "jest-canvas-mock": "2.5.2",
+    "@edx/browserslist-config": "^1.5.0",
+    "@edx/typescript-config": "^1.1.0",
+    "@faker-js/faker": "^8.4.1",
+    "@openedx/frontend-build": "^14.3.1",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "acorn": "^8.5.0",
+    "axios": "^1.7.9",
+    "axios-mock-adapter": "^1.19.0",
+    "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-fetch-mock": "3.0.3",
-    "jest-when": "3.6.0",
-    "match-media-mock": "0.1.1",
-    "mockdate": "3.0.5",
-    "prettier": "2.2.1",
-    "react-test-renderer": "18.3.1",
-    "reactifex": "1.1.1",
-    "resize-observer-polyfill": "1.5.1",
-    "rosie": "2.1.1",
-    "ts-loader": "9.5.1"
+    "jest-fetch-mock": "^3.0.3",
+    "jest-when": "^3.6.0",
+    "match-media-mock": "^0.1.1",
+    "mockdate": "^3.0.5",
+    "prettier": "^2.2.1",
+    "react-test-renderer": "^18.3.1",
+    "reactifex": "^1.1.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "rosie": "^2.1.1",
+    "ts-loader": "^9.5.1"
   },
   "keywords": [],
   "license": "AGPL-3.0",
   "scripts": {
     "build": "fedx-scripts webpack",
-    "build:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run build",
+    "build:with-theme": "paragon install-theme && npm run install-theme && npm run build && npm install",
     "i18n_extract": "fedx-scripts formatjs extract --throws",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx --ext .ts --ext .tsx .",
-    "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx --ext .ts --ext .tsx .",
+    "lint:fix": "npm run lint -- --fix",
     "precommit": "npm run lint",
-    "snapshot": "fedx-scripts jest --updateSnapshot",
-    "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save",
+    "snapshot": "npm run test -- --updateSnapshot",
+    "snapshot:watch": "npm run snapshot -- --watch",
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:stage": "npm run start -- --config=webpack.dev-stage.config.js",
-    "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run start",
-    "start:stage:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run start:stage",
+    "start:with-theme": "paragon install-theme && npm run start",
+    "start:stage:with-theme": "paragon install-theme && npm run start:stage && npm install",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
     "test:watch": "npm run test -- --watch",
     "serve": "fedx-scripts serve",
