--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@edx/frontend-enterprise-catalog-search": "npm:@adamstankiewicz/openedx-frontend-enterprise-catalog-search@^10.9.3",
     "@edx/frontend-enterprise-hotjar": "^7.2.0",
     "@edx/frontend-enterprise-logistration": "^9.2.0",
-    "@edx/frontend-enterprise-utils": "npm:@adamstankiewicz/openedx-frontend-enterprise-utils@^9.2.2",
+    "@edx/frontend-enterprise-utils": "^10.0.0",
     "@edx/frontend-platform": "^8.2.1",
     "@edx/openedx-atlas": "^0.6.2",
     "@edx/reactifex": "^2.2.0",
