--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "snapshot:watch": "npm run snapshot -- --watch",
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:stage": "npm run start -- --config=webpack.dev-stage.config.js",
-    "start:with-theme": "paragon install-theme && npm run start",
+    "start:with-theme": "paragon install-theme && npm run start && npm install",
     "start:stage:with-theme": "paragon install-theme && npm run start:stage && npm install",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
     "test:watch": "npm run test -- --watch",
