--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   "license": "AGPL-3.0",
   "scripts": {
     "build": "fedx-scripts webpack",
-    "build:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run build",
+    "build:with-theme": "paragon install-theme && npm run build && npm install",
     "i18n_extract": "fedx-scripts formatjs extract --throws",
     "check-types": "tsc --noEmit",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx --ext .ts --ext .tsx .",
@@ -101,8 +101,8 @@
     "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save",
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:stage": "npm run start -- --config=webpack.dev-stage.config.js",
-    "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run start",
-    "start:stage:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && npm run start:stage",
+    "start:with-theme": "paragon install-theme && npm run start && npm install",
+    "start:stage:with-theme": "paragon install-theme && npm run start:stage && npm install",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
     "test:watch": "npm run test -- --watch",
     "serve": "fedx-scripts serve",
