feat: expand useBFf for useAlgoliaSearch use case

--- a/.env.development-stage
+++ b/.env.development-stage
@@ -63,4 +63,5 @@ FEATURE_ENABLE_VIDEO_CATALOG='false'
 
 # Algolia
 ALGOLIA_INDEX_NAME='enterprise_catalog_new'
+ALGOLIA_REPLICA_INDEX_NAME='enterprise_catalog_new_duration_desc'
 ALGOLIA_INDEX_NAME_JOBS='stage_taxonomy'
