--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,13 @@
+coverage:
+  status:
+    project:
+      default:
+        target: auto
+        threshold: 0.05%
+    patch:
+      default:
+        target: auto
+        threshold: 0%
 ignore:
   - "src/i18n"
   - "src/index.jsx"
