chore: tests for useStatefulEnroll

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "extends": "@edx/typescript-config",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+    "outDir": "dist"
   },
   "include": [
     "src/**/*",
