--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash.clonedeep": "4.5.0",
     "lodash.debounce": "4.0.8",
     "lodash.isnil": "4.0.0",
+    "lodash.isplainobject": "4.0.6",
     "plotly.js-dist": "2.35.3",
     "prop-types": "15.8.1",
     "react": "17.0.2",
