--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@lukemorales/query-key-factory": "^1.3.4",
     "@openedx/frontend-slot-footer": "^1.1.0",
     "@openedx/paragon": "^22.17.0",
-    "@tanstack/react-query": "^4.36.1",
-    "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-query": "^5.72.2",
+    "@tanstack/react-query-devtools": "^5.72.2",
     "accessible-nprogress": "^2.1.2",
     "algoliasearch": "^4.24.0",
     "classnames": "^2.5.1",
@@ -63,7 +63,7 @@
     "@edx/browserslist-config": "^1.5.0",
     "@edx/typescript-config": "^1.1.0",
     "@faker-js/faker": "^8.4.1",
-    "@openedx/frontend-build": "^14.4.1",
+    "@openedx/frontend-build": "^14.4.2",
     "@tanstack/eslint-plugin-query": "^4.38.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -92,6 +92,7 @@
     "build:with-theme": "paragon install-theme && npm run build && npm install",
     "i18n_extract": "fedx-scripts formatjs extract --throws",
     "check-types": "tsc --noEmit",
+    "check-types:watch": "npm run check-types -- --watch",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx --ext .ts --ext .tsx .",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "npm run lint",
