--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-string-replace": "^1.1.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
+    "type-fest": "^3.13.1",
     "universal-cookie": "^4.0.4",
     "uuid": "^9.0.1",
     "video.js": "^8.22.0",
