--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.40.4",
     "react-parallax": "^3.5.2",
