--- a/src/types/openapi-schemas/enterprise-subsidy.yaml
+++ b/src/types/openapi-schemas/enterprise-subsidy.yaml
@@ -370,6 +370,8 @@ paths:
           name: uuid
           schema:
             type: string
+            format: uuid
+          description: A UUID string identifying this Subsidy.
           required: true
       tags:
         - subsidy
