--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@1.2.3",
-    "@edx/frontend-component-footer": "14.1.3",
+    "@edx/frontend-component-footer": "^14.6.0",
     "@edx/frontend-enterprise-catalog-search": "10.8.0",
     "@edx/frontend-enterprise-hotjar": "7.1.0",
     "@edx/frontend-enterprise-logistration": "9.1.0",
@@ -18,7 +18,6 @@
     "@edx/reactifex": "2.2.0",
     "@loadable/component": "5.16.4",
     "@lukemorales/query-key-factory": "1.3.4",
-    "@openedx/frontend-slot-footer": "1.0.7",
     "@openedx/paragon": "21.13.1",
     "@tanstack/react-query": "4.36.1",
     "@tanstack/react-query-devtools": "4.36.1",
