--- a/package.json
+++ b/package.json
@@ -31,12 +31,7 @@
     "history": "^4.10.1",
     "iso-639-1": "^2.1.15",
     "jest-localstorage-mock": "^2.4.26",
-    "lodash.camelcase": "^4.3.0",
-    "lodash.capitalize": "^4.2.1",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.isnil": "^4.0.0",
-    "lodash.memoize": "^4.1.2",
+    "lodash-es": "^4.17.21",
     "plotly.js-dist": "^2.35.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
